--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exposición Histórica con Reveal.js</title>
-    <link rel="stylesheet" href="node_modules/reveal.js/dist/reveal.css">
+    <link rel="stylesheet" href="reveal/reveal.css">
     <link rel="stylesheet" href="node_modules/reveal.js/dist/theme/black.css" id="theme"> <!-- Tema oscuro y formal -->
     <style>
       /* Eliminar márgenes y asegurar que ocupen toda la pantalla */
@@ -411,7 +411,7 @@
       </div>
     </div>
 
-    <script src="node_modules/reveal.js/dist/reveal.js"></script>
+    <script src="reveal/reveal.js"></script>
     <script>
       Reveal.initialize({
         embedded: true, // Reveal.js se ajusta a la página y permite scroll nativo
