Ultimas modificaciones con build

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exposición Histórica con Reveal.js</title>
-    <link rel="stylesheet" href="reveal/reveal.css">
-    <link rel="stylesheet" href="node_modules/reveal.js/dist/theme/black.css" id="theme"> <!-- Tema oscuro y formal -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/reveal.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/theme/black.min.css" id="theme">
     <style>
       /* Eliminar márgenes y asegurar que ocupen toda la pantalla */
       body, html {
@@ -411,7 +411,7 @@
       </div>
     </div>
 
-    <script src="reveal/reveal.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/reveal.min.js"></script>
     <script>
       Reveal.initialize({
         embedded: true, // Reveal.js se ajusta a la página y permite scroll nativo
