--- a/index-good.html
+++ b/index-good.html
@@ -54,6 +54,10 @@
       background-color: #555;
     }
 
+    .contenedor-texto {
+      
+    }
+
     /* Configuración de Reveal.js */
     .reveal {
       height: 100vh;
@@ -130,7 +134,7 @@
   <div class="contenedor-global">
     <!-- Contenedor principal de bienvenida -->
     <div class="contenedor-principal">
-      <div>
+      <div class="contenedor-texto">
         <h1>Soy Alan Tavizon</h1>
         <p>Estudiante de la UNAM, amante de la historia.</p>
         <p>Contáctame para más información o colaboraciones.</p>
